# taligent_forecasting_DT

./: .gitignore  DIEGO - Instructions for technical problem set_DS_DE.docx  Dockerfile  README.md  backup.sh  docker-compose.yaml  entrypoint.sh  ofelia.ini  pyproject.toml
agent/: agent.py
backend/: dockerfile  main.py
database/: init.sql
models/: xgboost_forecaster_20260613_064028.pkl  xgboost_forecaster_20260613_074415.pkl  xgboost_forecaster_20260614_071231.pkl
notebooks/: 01_data_exploration.ipynb  02_county_level_sales.ipynb  03_store_level_sales.ipynb  04_average_prices_county.ipynb
src/: app.py  db_setup.py  training copy.py  training.py  utils.py
tests/: __init__.py  test_monitoring.py  test_tracking.py
