[project]
name = "taligent"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Gasch",email = "eldie1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "mlflow (>=3.13.0,<4.0.0)",
    "prophet (>=1.3.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "tqdm (>=4.68.2,<5.0.0)",
    "google-cloud-bigquery[bqstorage,pandas] (>=3.41.0,<4.0.0)",
    "db-dtypes (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false